# gpx_video_overlay

./: README.md  pyproject.toml
src/gpx_video_overlay/: __init__.py  app.py  gpx_parser.py  gui.py  map_generator.py  video_processor.py
src/gpx_video_overlay/templates/: gpx_edit.html  index.html  mp4_edit.html
