[build-system]
requires = ["flit_core >=3.4", "versioneer[toml]==0.29"]
build-backend = "flit_core.buildapi"

[project]
name = "gpx_video_overlay"
authors = [
    { name = "Sam Eriksen", email = "sam.eriksen@bristol.ac.uk" },
]
license = { file = "LICENSE" }

description = "Add GPX map to videos"
readme = "README.md"

requires-python = ">=3.10"

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
]

dynamic = ["version"]

dependencies = [
    "gpxpy",
    "folium",
    "moviepy",
    "pygame",
]

[project.urls]
homepage = "https://github.com/seriksen/gpx_video_overlay"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/gpx_video_overlay/_version.py"
versionfile_build = "gpx_video_overlay/_version.py"
tag_prefix = ""
parentdir_prefix = "gpx_video_overlay-"

[project.scripts]
dask-dirac = "gpx_video_overlay.gpu:main"