[tool.poetry]
name = "gpx_video_overlay"
version = "0.0.0"  # This will be replaced by poetry-dynamic-versioning
description = "Add GPX map to videos"
authors = ["Sam Eriksen <sam.eriksen@bristol.ac.uk>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/seriksen/gpx_video_overlay"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = ">=3.12"
gpxpy = "^1.4.2"
folium = "^0.12.1"
moviepy = "^1.0.3"
pygame = "^2.0.1"
Flask = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true